--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -104,6 +104,7 @@
     <Compile Include="V3\Experiments.cs" />
     <Compile Include="V4\Abilities\AbilityBase.cs" />
     <Compile Include="V4\Abilities\ConceptAbilityBase.cs" />
+    <Compile Include="V4\Abilities\ItReferenceResolver.cs" />
     <Compile Include="V4\Abilities\WhatProvider.cs" />
     <Compile Include="V4\Abilities\FindProvider.cs" />
     <Compile Include="V4\Abilities\DefiniteReferenceResolver.cs" />
@@ -142,10 +143,12 @@
     <Compile Include="V4\Events\TracedScoreEventBase.cs" />
     <Compile Include="V4\Models\EventBasedNLG.cs" />
     <Compile Include="V4\Policy\AskForPhraseMeaning.cs" />
+    <Compile Include="V4\Policy\HowCanIHelpYouFallback.cs" />
     <Compile Include="V4\Policy\OfferResult.cs" />
     <Compile Include="V4\Policy\PolicyPartBase.cs" />
     <Compile Include="V4\Policy\AskForPropertyCategory.cs" />
     <Compile Include="V4\Policy\RequestRefinement.cs" />
+    <Compile Include="V4\Policy\RequestSubstitution.cs" />
     <Compile Include="V4\Primitives\ParameterDefinition.cs" />
     <Compile Include="V4\Phrase.cs" />
     <Compile Include="V3\Models\HandcraftedStrategy.cs" />
