--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -104,7 +104,11 @@
     <Compile Include="V3\Experiments.cs" />
     <Compile Include="V4\Abilities\AbilityBase.cs" />
     <Compile Include="V4\Abilities\ConceptAbilityBase.cs" />
+    <Compile Include="V4\Abilities\EssentialKnowledge.cs" />
     <Compile Include="V4\Abilities\ItReferenceResolver.cs" />
+    <Compile Include="V4\Abilities\AssignUnknownProperty.cs" />
+    <Compile Include="V4\Abilities\PromptAbility.cs" />
+    <Compile Include="V4\Abilities\PropertyValueDisambiguation.cs" />
     <Compile Include="V4\Abilities\WhatProvider.cs" />
     <Compile Include="V4\Abilities\FindProvider.cs" />
     <Compile Include="V4\Abilities\DefiniteReferenceResolver.cs" />
@@ -142,11 +146,13 @@
     <Compile Include="V4\Events\PropertySetEvent.cs" />
     <Compile Include="V4\Events\TracedScoreEventBase.cs" />
     <Compile Include="V4\Models\EventBasedNLG.cs" />
+    <Compile Include="V4\Policy\AskForDisambiguation.cs" />
     <Compile Include="V4\Policy\AskForPhraseMeaning.cs" />
     <Compile Include="V4\Policy\HowCanIHelpYouFallback.cs" />
     <Compile Include="V4\Policy\OfferResult.cs" />
     <Compile Include="V4\Policy\PolicyPartBase.cs" />
     <Compile Include="V4\Policy\AskForPropertyCategory.cs" />
+    <Compile Include="V4\Policy\LearnUnknownForRefinement.cs" />
     <Compile Include="V4\Policy\RequestRefinement.cs" />
     <Compile Include="V4\Policy\RequestSubstitution.cs" />
     <Compile Include="V4\Primitives\ParameterDefinition.cs" />
