--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Experiment\AnnotatedActionEntry.cs" />
     <Compile Include="Experiment\GraphNavigationExperiment.cs" />
     <Compile Include="Experiment\AnswerExtractionExperiment.cs" />
+    <Compile Include="Experiment\LearnRestaurantPropertyExperiment.cs" />
     <Compile Include="Experiment\PhraseRestaurantExperiment.cs" />
     <Compile Include="Experiment\QuestionCollectionExperiment.cs" />
     <Compile Include="Experiment\AnnotatedLogFile.cs" />
@@ -170,6 +171,7 @@
     <None Include="www\action_log.haml" />
     <None Include="www\annotate.haml" />
     <None Include="www\annotate2.haml" />
+    <None Include="www\learn_restaurant_property.haml" />
     <None Include="www\restaurant_phrase.haml" />
     <None Include="www\graph_navigation.haml" />
     <None Include="www\answer_extraction.haml" />
