--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -104,12 +104,14 @@
     <Compile Include="V3\Experiments.cs" />
     <Compile Include="V4\Abilities\AbilityBase.cs" />
     <Compile Include="V4\Abilities\ConceptAbilityBase.cs" />
+    <Compile Include="V4\Abilities\PartialDoYouKnow.cs" />
+    <Compile Include="V4\Abilities\DoYouKnow.cs" />
     <Compile Include="V4\Abilities\EssentialKnowledge.cs" />
     <Compile Include="V4\Abilities\ItReferenceResolver.cs" />
     <Compile Include="V4\Abilities\AssignUnknownProperty.cs" />
     <Compile Include="V4\Abilities\PromptAbility.cs" />
     <Compile Include="V4\Abilities\PropertyValueDisambiguation.cs" />
-    <Compile Include="V4\Abilities\RememberNewProperty.cs" />
+    <Compile Include="V4\Abilities\RememberPropertyValue.cs" />
     <Compile Include="V4\Abilities\WhatProvider.cs" />
     <Compile Include="V4\Abilities\FindProvider.cs" />
     <Compile Include="V4\Abilities\DefiniteReferenceResolver.cs" />
@@ -122,6 +124,7 @@
     <Compile Include="V4\EventBeam\ComposedPolicyBeamGenerator.cs" />
     <Compile Include="V4\EventBeam\FeatureGenerator.cs" />
     <Compile Include="V4\Events\CloseEvent.cs" />
+    <Compile Include="V4\Events\ExportEvent.cs" />
     <Compile Include="V4\Events\FrameEvent.cs" />
     <Compile Include="V4\EventBeam\BeamGenerator.cs" />
     <Compile Include="V4\EventBeam\BeamNode.cs" />
@@ -148,7 +151,7 @@
     <Compile Include="V4\Events\TracedScoreEventBase.cs" />
     <Compile Include="V4\Models\EventBasedNLG.cs" />
     <Compile Include="V4\Policy\AskForDisambiguation.cs" />
-    <Compile Include="V4\Policy\AssesPropertyKnowledge.cs" />
+    <Compile Include="V4\Policy\LearnPropertyValue.cs" />
     <Compile Include="V4\Policy\AssignUnknownValue.cs" />
     <Compile Include="V4\Policy\HowCanIHelpYouFallback.cs" />
     <Compile Include="V4\Policy\OfferResult.cs" />
