Improve concept learning policy.

--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -104,6 +104,7 @@
     <Compile Include="V3\Experiments.cs" />
     <Compile Include="V4\Abilities\AbilityBase.cs" />
     <Compile Include="V4\Abilities\AcceptNewProperty.cs" />
+    <Compile Include="V4\Abilities\CollectNewConceptLearning.cs" />
     <Compile Include="V4\Abilities\OptionPrompt.cs" />
     <Compile Include="V4\Abilities\ConceptAbilityBase.cs" />
     <Compile Include="V4\Abilities\PartialDoYouKnow.cs" />
@@ -154,20 +155,25 @@
     <Compile Include="V4\Models\EventBasedNLG.cs" />
     <Compile Include="V4\Policy\AfterDescriptionRemembered.cs" />
     <Compile Include="V4\Policy\AfterPropertyLearned.cs" />
-    <Compile Include="V4\Policy\AskForAliasAfterLearnUnknown.cs" />
+    <Compile Include="V4\Policy\RememberDescriptionAfterLearnNewPhrase.cs" />
     <Compile Include="V4\Policy\CreateAliasHypothesis.cs" />
+    <Compile Include="V4\Policy\ProcessCollectedNewConceptLearning.cs" />
+    <Compile Include="V4\Policy\RequestSubstitutionWithUnknown.cs" />
     <Compile Include="V4\Policy\LearnNewPhrase.cs" />
     <Compile Include="V4\Policy\AskForDisambiguation.cs" />
     <Compile Include="V4\Policy\LearnPropertyValue.cs" />
-    <Compile Include="V4\Policy\AssignUnknownValue.cs" />
+    <Compile Include="V4\Policy\RequestNewPropertyExplanation.cs" />
     <Compile Include="V4\Policy\HowCanIHelpYouFallback.cs" />
     <Compile Include="V4\Policy\OfferResult.cs" />
     <Compile Include="V4\Policy\PolicyPartBase.cs" />
     <Compile Include="V4\Policy\LearnUnknownForRefinement.cs" />
+    <Compile Include="V4\Policy\ReaskUnknownValue.cs" />
     <Compile Include="V4\Policy\ReaskDisambiguation.cs" />
     <Compile Include="V4\Policy\RequestActionWithKnownConfirmation.cs" />
     <Compile Include="V4\Policy\RequestRefinement.cs" />
     <Compile Include="V4\Policy\RequestSubstitution.cs" />
+    <Compile Include="V4\Policy\UnknownAnsweredToLearnNewPhrase.cs" />
+    <Compile Include="V4\Policy\UnknownAnsweredToRefinement.cs" />
     <Compile Include="V4\Primitives\ParameterDefinition.cs" />
     <Compile Include="V4\Phrase.cs" />
     <Compile Include="V3\Models\HandcraftedStrategy.cs" />
